Fix the button alignment

--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -33,8 +33,7 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
-  padding: 8px;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding: 8px 24px;
   display: block;
+  margin: auto;
 }
